--- a/README
+++ b/README
@@ -1,68 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet Alexander</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .container {
-            max-width: 400px;
-            background-color: #fff;
-            border-radius: 8px;
-            padding: 40px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        h1 {
-            font-size: 24px;
-            color: #007bff;
-            margin-bottom: 20px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: left;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        .emoji {
-            font-size: 24px;
-            margin-right: 10px;
-            vertical-align: middle;
-        }
-        .interests {
-            font-weight: bold;
-            color: #007bff;
-        }
-        .fun-fact {
-            margin-top: 20px;
-            font-style: italic;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>👋 Hello World! I’m Alexander...</h1>
-        <hr>
-        <ul>
-            <li><span class="emoji">👀</span> I’m interested in <span class="interests">Development</span></li>
-            <li><span class="emoji">🌱</span> I’m currently learning: React, Fullstack Development + Cyber Security</li>
-            <li><span class="emoji">📫</span> How to reach me <a href="mailto:alex404hm@alexander-holm.com">alex404hm@alexander-holm.com</a></li>
-            <li><span class="emoji">😄</span> Pronouns: He/Him</li>
-            <li><span class="emoji">⚡</span> Fun fact: I'm a Nerd</li>
-        </ul>
-        <p class="fun-fact">Did you know? Nerds make the best developers! 😉</p>
-    </div>
-</body>
-</html>
+# 👋 Hello World! I’m Alexander...
+
+---
+
+## About Me
+
+- 👀 I’m interested in **Development**
+- 🌱 I’m currently learning: React, Fullstack Development + Cyber Security
+- 📫 How to reach me: [alex404hm@alexander-holm.com](mailto:alex404hm@alexander-holm.com)
+- 😄 Pronouns: He/Him
+- ⚡ Fun fact: I'm a Nerd
+
+---
+
+## Fun Fact
+
+Did you know? Nerds make the best developers! 😉
+
