--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # 👋 Hello World! I’m Alexander...
 
-![Profile Picture](https://your-image-url.jpg)
+![Profile Picture](https://i.pinimg.com/originals/e7/ef/75/e7ef757f14c7f7348cba258992d5d532.jpg)
 
 ## About Me
 
@@ -8,7 +8,7 @@ Hi there! I'm Alexander, a passionate developer based in [Your City, Your Countr
 
 - 👀 I’m interested in **Development**, particularly in web development and cybersecurity.
 - 🌱 I’m currently learning: React, Fullstack Development, and improving my skills in Cyber Security.
-- 📫 How to reach me: [alex404hm@alexander-holm.com](mailto:alex404hm@alexander-holm.com)
+- 📫 How to reach me: [alex404hm@alexander-holm.com]
 - 😄 Pronouns: He/Him
 - ⚡ Fun fact: I'm a proud nerd and enjoy exploring new technologies!
 
@@ -29,11 +29,9 @@ Here are some of the technologies and tools I work with:
 
 ## Projects
 
-### Project 1: [Project Name](link-to-project-repository)
-Brief description of the project and its technologies used.
+### Project 1: [Portfolio Template](https://github.com/alex404hm/new-portfolio)
 
-### Project 2: [Project Name](link-to-project-repository)
-Brief description of the project and its technologies used.
+### Project 2: [FiveM Server Template](https://github.com/alex404hm/main)
 
 ---
 
@@ -47,9 +45,8 @@ Did you know? Nerds make the best developers! 😉
 
 Feel free to reach out if you have any questions, collaboration ideas, or just want to chat about tech and development.
 
-- Email: [alex404hm@alexander-holm.com](mailto:alex404hm@alexander-holm.com)
-- LinkedIn: [Alexander Holm](https://www.linkedin.com/in/alexander-holm)
-- Twitter: [@alexander_dev](https://twitter.com/alexander_dev)
+- Email: (alex404hm@alexander-holm.com)
+- LinkedIn: [Alexander Holm](https://www.linkedin.com/in/alex404hm)
+- Twitter: [@alexander_dev](https://twitter.com/alex404hm)
 
 Looking forward to connecting with you!
-
